# ThisCrow

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  cors.json  docker-compose.yml  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml  docker-publish.yml
.sqlx/: query-039354b8001d2015e5f094ddfc6b6729381729fd4c52e6f3106ef0f30e5fb69b.json  query-0399d15ba9ef6f562fd6c5cc9c783aef5b8a2131725cb6777f99dfd2f56b0300.json  query-05ad0937cb966df094aaa63e01761062cf5a97b76319534aff3b737b3b3b6a68.json  query-075456b8195a88b69d0cd5009ef62c3410817349caf013bfbcf0af2f92c9d084.json  query-095afa6455cc247471fbbbbfd4b52d58ff422a982168b6d547ae39d033d9f9a9.json  query-0a30b64fa2523a53788919c45a4102b3428a8e0bf5576efa9f7714acb0eb4d7f.json  query-0b663c03be53371a0354f777555185a2eb93ef442d21814bad94af7346286553.json  query-0b72902bc8ec599bc847b3671444f3f19f59bdcc47e22697d73196df434c9aca.json  query-0bbc1639abcd7468d3f46a434417b574dfe04fdffc56044c680f0725f82f1f75.json  query-1302aa06570eca2a6e82edf40e93de44e258ebf70326657b25a5b964547599f8.json  query-1642fd17a2c78cd43b4f985a5d7fc45c167a0afe8905a36a56d80f537263cb50.json  query-1805f5ecd824a94c7502b130680d4f3c09b07e57bda0407bc3a91d65fd17fb5e.json  query-184cdbe9d50a20ad52f8fe00c64f8326707f3f90ae732c740618e3590d0c715a.json  query-192372ea27b71f667b543308a584d494661cf6b2e0211d32cca14343fbf46852.json  query-1ac64b077793085693c84ce72781c6250a655738acc358b3facb6c7da18a0b6f.json  query-1ed09549cccd327fc9929fcc6575b2e03a19f00d893b772c3b9228a4a1b91785.json  query-21caf1d1f1cea55ef6a6b7c78f9e9a79e7c90e4d1b0ef72fb5f97a445f5ba9d4.json  query-29257df199a0a04b425873c6208d16411a0be9d25dc26ca71d5979aceeb2b11f.json  query-293230fe84142a2d492f92d100f72a39d4c27e5dfec0889789630a4e5b3af9f7.json  query-2b274914ca6b7e5f4780e66e52fd4cc68d3ef1eaae498cdc3f9b359490a7a152.json  query-2b7b2e76eb506d3a5914293e6f0c0383d28a010ae78ce04475d0b90b3559efa8.json  query-2bdc6d882679ca5a61139bdfcc1eb28e3046eba76aba497bcc13632ac10f8fc5.json  query-2d571907d7b2adada14ec4ca174ed59c03e2d17136a339984c4577e8b7eb928d.json  query-2d856e6ae2ef18f76e4f90a3b634035525546ea77a59fe864eb7073efc61dab5.json  query-33a967b021d3110f6c18446a92f168134c4efe1883e5fe9a5deee56020fd6ea7.json  query-3444fa71058a913b7bc3c6135b05d68456d82071f5c559f2099da411e3f5f19f.json  query-36942decf435da1e5f4f42c231eb36cddc90907162f56937892a71fdfe8e0a84.json  query-38483eedc1e4ce87d0e97dbd763ec181052a170e4644a81ceffa2c72724a9de5.json  query-40a9c1994cc83c3d59ae21df0f29d49101d7cb26aad8fa3676b1eacb6d9e701a.json  query-43e714d5d7ebd2c6c32d59ea1105b22156a9e0e912422961a52fea4c3d125d80.json  query-50aebfc0624fa29c365e74e2cc64de87327c2d03967aa28a8cf858a18431654b.json  query-5125e84e73cc861bc860f4100aaca059a5a3ada180f540b69ae55b5ec5520b38.json  query-5535eb0ca3e947d40295be48213a5a140d57f42e1e2c78c058c76f04f9453915.json  query-5c7b8b0bbff9a307d958f01b6ad0b97f5aa897c2c8cf812bb2f58cea89c75910.json  query-5f91bf735842690f46246774a4a13e44f7ecf7c68983d617082649c264d9b7ef.json  query-631877f9d19d60799c5bdf7badcc798448525390f6340295422eb837895a84de.json  query-67272868504fb97074b7ea9666eb48bbcae4677680c40d9aff3c9c46c31c0eb3.json  query-67c28aa0b656684581672dadfac4a8e87cfcbb7511e87a1bb8a8b2e41074b28f.json  query-68083298922615dc997c070e2f35ac90e02ce952cc692e573f97e37450327b1c.json  query-6829b91eb860b4bc4bfbbf4bedd808777b9a1e2da78475480c4682439c513577.json  (+69 more)
migrations/: 20250501154420_create_tables.sql  20250501154430_create_tables.sql  20251216193136_last_seen.sql  20260225213200_create_indexes.sql  20260320201900_create_invitations.sql  20260428145650_add_user_banner.sql  20260508120000_groups_everyone_permissions.sql  20260512150000_everyone_channel_overrides.sql  20260513120000_create_group_bans.sql  20260516120000_create_reactions.sql  20260521220000_create_blocks.sql
src/: auth.rs  db.rs  id.rs  lockmap.rs  mail.rs  main.rs  middleware.rs  models.rs  msgpack.rs  ratelimiter.rs
src/db/: group.rs  message.rs  mod.rs  reaction.rs  user.rs
src/message/: ack.rs  data.rs  dispatch.rs  event.rs  mod.rs  model.rs  notify.rs  service.rs  snowflake.rs
src/route/: auth.rs  event.rs  group.rs  info.rs  invitation.rs  message.rs  mod.rs  state.rs  upload.rs  user.rs  webrtc.rs  ws.rs
src/state/: app.rs  group.rs  mod.rs  user.rs
stress/: .gitignore  Cargo.toml
stress/src/: api.rs  client.rs  config.rs  main.rs  phase1.rs  phase2.rs  state.rs  tui.rs  ws.rs
