[package]
name = "ThisCrow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ThisCrow"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
actix-ws = "0.2"
futures = "0.3"
futures-util = "0.3"
dashmap = "5.4"
sanitize-filename = "0.5"
actix-multipart = "0.7.0"
once_cell = "1.21"
actix-cors = "0.7"
actix-files = "0.6"
tokio = "1.45"
argon2 = "0.4"
rand_core = "0.6"
sha256 = "1.6.0"
rand = "0.9.1"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }