[package]
name = "ThisCrow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ThisCrow"
path = "src/main.rs"

[dependencies]
actix-web = "4.0"
bitflags = "1.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.0", features = ["chrono"] }
rmpv = { version = "1.0", features = ["with-serde"] }
rmp-serde = "1.3.1"
serde_bytes = "0.11"
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
actix-ws = "0.3.1"
futures = "0.3"
futures-util = "0.3"
dashmap = { version = "6.1" }
ahash = "0.8"
sanitize-filename = "0.5"
actix-multipart = "0.7.0"
once_cell = "1.21"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
argon2 = "0.4"
rand_core = "0.6"
sha256 = "1.6.0"
rand = "0.9.1"
lettre = { version = "0.11", features = ["tokio1-rustls-tls"], optional = true }
anyhow = "*"
bytes = "1"
rocksdb = "=0.24.0"
itertools = "0.10"
actix-governor = "0.10"
derive_more = { version = "2.1.1", features = ["full"] }
parking_lot = "0.12.5"
async-lock = "3.4.2"
monoio = { version = "0.2.4", features = ["sync"] }
flume = "0.12.0"
monoio-tungstenite = "0.3.0"
tungstenite = "0.28.0"
socket2 = "0.6.3"

[features]
default = []
mail = ["lettre"]
