[package]
name = "stress"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
rand_distr = "0.5.1"
anyhow = "1"
url = "2"
http = "1"
log = "0.4"
env_logger = "0.11"
dashmap = "6"
rmp-serde = "1"
indicatif = "0.17"
futures-util = "0.3"
once_cell = "1.21"

[profile.release]
debug = true
split-debuginfo = "off"
strip = false

